--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="firefly-container" style="position: absolute; width:100%; height:100%; overflow:hidden; pointer-events:none;"></div>
 
     <div id="content">
-        <h1>¿Quieres ser mi novia?</h1>
+        <h1>¿Quieres ser mi quedante?</h1>
         <div class="btn-container">
             <button id="yesBtn">Claramente</button>
             <button id="noBtn">No</button>
