--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Una Pregunta Especial</title>
+    <title>Será?</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- CAMBIO: Agregada fuente 'Playfair Display' y removida 'Great Vibes' -->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Montserrat:wght@300;500&display=swap" rel="stylesheet">
